# imag

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.nix  build.rs  default.nix  imagrc.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.imag-documentation/: Cargo.toml
.imag-documentation/src/: lib.rs
doc/: Makefile  README.md  default.nix
doc/src/: 0000.md  00000.md  01000-intro.md  01010-architecture.md  0200-store.md  02000-store.md  02010-linking.md  02020-tagging.md  03000-lib-core.md  (+125 more)
etc/: cli.yml  imag-contact-mutt-query-command-helper.sh  ioverlander-wiki-import.sh
imag-bookmark/: Cargo.toml
imag-bookmark/src/: main.rs  ui.rs
imag-counter/: Cargo.toml  README.md
imag-counter/src/: create.rs  delete.rs  interactive.rs  list.rs  main.rs  ui.rs
imag-diary/: Cargo.toml
imag-diary/src/: create.rs  delete.rs  edit.rs  list.rs  main.rs  ui.rs  util.rs  view.rs
imag-link/: Cargo.toml  README.md  test_config.toml
imag-link/src/: main.rs  ui.rs
imag-link/tests/: Makefile  link-test.sh  utils.sh
imag-mail/: Cargo.toml  README.md
imag-mail/src/: main.rs  ui.rs
imag-notes/: Cargo.toml
imag-notes/src/: main.rs  ui.rs
imag-ref/: Cargo.toml  README.md
imag-ref/src/: main.rs  ui.rs
imag-ruby/: Cargo.toml  Makefile  README.md
imag-ruby/src/: lib.rs  store.rs
imag-ruby/test/: test_store_id_load.rb
imag-store/: Cargo.toml  README.md
imag-store/src/: create.rs  delete.rs  dump.rs  error.rs  get.rs  main.rs  read.rs  retrieve.rs  ui.rs  update.rs  util.rs  verify.rs
imag-store/tests/: 001-create_test.sh  002-retrieve_test.sh  003-delete_test.sh  Makefile  utils.sh
imag-tag/: Cargo.toml  README.md
imag-tag/src/: main.rs  ui.rs  util.rs
imag-task/: Cargo.toml
imag-timetrack/: Cargo.toml
imag-timetrack/src/: common.rs  cont.rs  day.rs  main.rs  month.rs  start.rs  stop.rs  track.rs  ui.rs  week.rs  year.rs
imag-todo/: Cargo.toml
imag-todo/etc/: on-add.sh
imag-todo/src/: main.rs  ui.rs
imag-view/: Cargo.toml  README.md
imag-view/src/: editor.rs  error.rs  main.rs  ui.rs
imag-view/src/viewer/: mod.rs  stdout.rs
libimagannotation/: Cargo.toml  README.md
libimagannotation/src/: annotateable.rs  annotation.rs  annotation_fetcher.rs  error.rs  lib.rs
libimagbookmark/: Cargo.toml  README.md
libimagbookmark/src/: collection.rs  error.rs  lib.rs  link.rs  result.rs
libimagcounter/: Cargo.toml  README.md
libimagcounter/src/: counter.rs  error.rs  lib.rs  result.rs
libimagdiary/: Cargo.toml  README.md
libimagdiary/src/: config.rs  diary.rs  diaryid.rs  entry.rs  error.rs  is_in_diary.rs  iter.rs  lib.rs  result.rs  viewer.rs
libimagentrycategory/: Cargo.toml
libimagentrydate/: Cargo.toml
libimagentrydate/src/: datepath.rs  entrydate.rs  error.rs  lib.rs
libimagentrydate/src/datepath/: accuracy.rs  compiler.rs  error.rs
libimagentrydatetime/: Cargo.toml
libimagentrydatetime/src/: datetime.rs  entrydate.rs  error.rs  lib.rs  range.rs  result.rs
libimagentrydatetime/src/datepath/: compiler.rs  format.rs  result.rs  to_store_id.rs
libimagentryedit/: Cargo.toml
libimagentryedit/src/: edit.rs  error.rs  lib.rs  result.rs
libimagentryfilter/: Cargo.toml  README.md
libimagentryfilter/src/: cli.rs  filter.rs  lib.rs
libimagentryfilter/src/builtin/: bool_filter.rs  mod.rs
libimagentryfilter/src/builtin/content/: grep.rs  mod.rs
libimagentryfilter/src/builtin/content/length/: is_over.rs  is_under.rs  mod.rs
libimagentryfilter/src/builtin/header/: field_eq.rs  field_exists.rs  field_grep.rs  field_gt.rs  field_isempty.rs  field_istype.rs  field_lt.rs  field_path.rs  field_predicate.rs  mod.rs
libimagentryfilter/src/builtin/header/field_path/: element.rs  error.rs  mod.rs
libimagentryfilter/src/builtin/header/version/: eq.rs  gt.rs  lt.rs  mod.rs  range.rs
libimagentryfilter/src/ops/: and.rs  not.rs  or.rs
libimagentryfilter/src/tags/: mod.rs
libimagentrylink/: Cargo.toml  README.md
libimagentrylink/src/: error.rs  external.rs  internal.rs  lib.rs  result.rs
libimagentrylist/: Cargo.toml  README.md
libimagentrylist/src/: cli.rs  error.rs  lib.rs  lister.rs  result.rs
libimagentrylist/src/listers/: core.rs  line.rs  mod.rs  path.rs  table.rs
libimagentrymarkdown/: Cargo.toml  README.md
libimagentrymarkdown/src/: error.rs  html.rs  lib.rs  link.rs  result.rs
libimagentryselect/: Cargo.toml  README.md
libimagentrytag/: Cargo.toml  README.md
libimagentrytag/src/: error.rs  exec.rs  lib.rs  result.rs  tag.rs  tagable.rs  ui.rs  util.rs
libimagentrytimetrack/: Cargo.toml
libimagentrytimetrack/src/: lib.rs  result.rs  tag.rs  timetracking.rs  timetrackingstore.rs
libimagentrytimetrack/src/iter/: create.rs  filter.rs  mod.rs  setendtime.rs  storeid.rs
libimagentryview/: Cargo.toml
libimagentryview/src/: error.rs  lib.rs  result.rs  viewer.rs
libimagentryview/src/builtin/: editor.rs  mod.rs  plain.rs  stdout.rs  versions.rs
libimagerror/: Cargo.toml  README.md
libimaginteraction/: Cargo.toml  README.md
libimaginteraction/src/: ask.rs  error.rs  filter.rs  lib.rs  readline.rs  result.rs  ui.rs
libimaglink/: Cargo.toml  README.md
libimagmail/: Cargo.toml
libimagmodule/: Cargo.toml
libimagnotes/: Cargo.toml
libimagref/: Cargo.toml  README.md
libimagrt/: Cargo.toml  README.md
libimagruby/: .gitignore  Cargo.toml  Makefile  README.md  imag.gemspec
libimagstore/: Cargo.toml  README.md
libimagstorestdhook/: Cargo.toml  README.md
libimagtag/: Cargo.toml
libimagtask/: Cargo.toml
libimagtimetrack/: Cargo.toml
libimagtimeui/: Cargo.toml
libimagtodo/: Cargo.toml
libimagutil/: Cargo.toml  README.md
scripts/: branch-contains-no-tmp-commits  changelog  check-binary-names  commit-template  find-dead-symlinks  gen-changelog  license-headers-updated  mkdocset  new-crate.sh  release.sh  signed-off-by-in-branch.sh  version-updated  which-commands-changed
src/: cli.rs  config.rs  configuration.rs  error.rs  main.rs  module.rs  runtime.rs  storage.rs
tests/: utils.sh
(+538 files in other folders)
