[workspace]
members = [
    ".imag-documentation",
    "bin",
    "imag-bookmark",
    "imag-counter",
    "imag-diary",
    "imag-link",
    "imag-mail",
    "imag-notes",
    "imag-ref",
    "imag-store",
    "imag-tag",
    "imag-timetrack",
    "imag-todo",
    "imag-view",
    "libimagannotation",
    "libimagbookmark",
    "libimagcounter",
    "libimagdiary",
    "libimagentrycategory",
    "libimagentrydatetime",
    "libimagentryedit",
    "libimagentryfilter",
    "libimagentrylink",
    "libimagentrylist",
    "libimagentrymarkdown",
    "libimagentrytag",
    "libimagentrytimetrack",
    "libimagentryview",
    "libimagerror",
    "libimaginteraction",
    "libimagmail",
    "libimagnotes",
    "libimagref",
    "libimagrt",
    "libimagstore",
    "libimagtimeui",
    "libimagtodo",
    "libimagutil",
]
