[workspace]
members = [
    "bin/core/imag",
    "bin/core/imag-annotate",
    "bin/core/imag-diagnostics",
    "bin/core/imag-gps",
    "bin/core/imag-grep",
    "bin/core/imag-link",
    "bin/core/imag-mv",
    "bin/core/imag-ref",
    "bin/core/imag-store",
    "bin/core/imag-tag",
    "bin/core/imag-view",
    "bin/domain/imag-bookmark",
    "bin/domain/imag-diary",
    "bin/domain/imag-mail",
    "bin/domain/imag-notes",
    "bin/domain/imag-timetrack",
    "bin/domain/imag-todo",
    "lib/core/libimagerror",
    "lib/core/libimagrt",
    "lib/core/libimagstore",
    "lib/domain/libimagbookmark",
    "lib/domain/libimagdiary",
    "lib/domain/libimagmail",
    "lib/domain/libimagnotes",
    "lib/domain/libimagtimetrack",
    "lib/domain/libimagtodo",
    "lib/entry/libimagentryannotation",
    "lib/entry/libimagentrycategory",
    "lib/entry/libimagentrydatetime",
    "lib/entry/libimagentryedit",
    "lib/entry/libimagentryfilter",
    "lib/entry/libimagentrygps",
    "lib/entry/libimagentrylink",
    "lib/entry/libimagentrylist",
    "lib/entry/libimagentrymarkdown",
    "lib/entry/libimagentryref",
    "lib/entry/libimagentrytag",
    "lib/entry/libimagentryview",
    "lib/etc/libimaginteraction",
    "lib/etc/libimagtimeui",
    "lib/etc/libimagutil",
]
