[workspace]
members = [
    "bin/core/imag",
    "bin/core/imag-annotate",
    "bin/core/imag-diagnostics",
    "bin/core/imag-edit",
    "bin/core/imag-gps",
    "bin/core/imag-grep",
    "bin/core/imag-ids",
    "bin/core/imag-init",
    "bin/core/imag-link",
    "bin/core/imag-mv",
    "bin/core/imag-ref",
    "bin/core/imag-store",
    "bin/core/imag-tag",
    "bin/core/imag-view",
    "bin/domain/imag-bookmark",
    "bin/domain/imag-contact",
    "bin/domain/imag-diary",
    "bin/domain/imag-habit",
    "bin/domain/imag-log",
    "bin/domain/imag-mail",
    "bin/domain/imag-notes",
    "bin/domain/imag-timetrack",
    "bin/domain/imag-todo",
    "lib/core/libimagerror",
    "lib/core/libimagrt",
    "lib/core/libimagstore",
    "lib/domain/libimagbookmark",
    "lib/domain/libimagcontact",
    "lib/domain/libimagdiary",
    "lib/domain/libimaghabit",
    "lib/domain/libimaglog",
    "lib/domain/libimagmail",
    "lib/domain/libimagnotes",
    "lib/domain/libimagtimetrack",
    "lib/domain/libimagtodo",
    "lib/domain/libimagwiki",
    "lib/entry/libimagentryannotation",
    "lib/entry/libimagentrycategory",
    "lib/entry/libimagentrydatetime",
    "lib/entry/libimagentryedit",
    "lib/entry/libimagentryfilter",
    "lib/entry/libimagentrygps",
    "lib/entry/libimagentrylink",
    "lib/entry/libimagentrymarkdown",
    "lib/entry/libimagentryref",
    "lib/entry/libimagentrytag",
    "lib/entry/libimagentryutil",
    "lib/entry/libimagentryview",
    "lib/etc/libimaginteraction",
    "lib/etc/libimagnotification",
    "lib/etc/libimagtimeui",
    "lib/etc/libimagutil",
]
