[package]
name = "imag-documentation"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Documentation crate of the imag distribution. Does not contain functionality"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]

[dependencies.libimagannotation]
path = "../libimagannotation"

[dependencies.libimagbookmark]
path = "../libimagbookmark"

[dependencies.libimagcounter]
path = "../libimagcounter"

[dependencies.libimagdiary]
path = "../libimagdiary"

[dependencies.libimagentrycategory]
path = "../libimagentrycategory"

[dependencies.libimagentrydatetime]
path = "../libimagentrydatetime"

[dependencies.libimagentryedit]
path = "../libimagentryedit"

[dependencies.libimagentryfilter]
path = "../libimagentryfilter"

[dependencies.libimagentrylink]
path = "../libimagentrylink"

[dependencies.libimagentrylist]
path = "../libimagentrylist"

[dependencies.libimagentrymarkdown]
path = "../libimagentrymarkdown"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

[dependencies.libimagentrytimetrack]
path = "../libimagentrytimetrack"

[dependencies.libimagentryview]
path = "../libimagentryview"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimaginteraction]
path = "../libimaginteraction"

[dependencies.libimagmail]
path = "../libimagmail"

[dependencies.libimagnotes]
path = "../libimagnotes"

[dependencies.libimagref]
path = "../libimagref"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagtimeui]
path = "../libimagtimeui"

[dependencies.libimagtodo]
path = "../libimagtodo"

[dependencies.libimagutil]
path = "../libimagutil"

