[package]
name = "imag-documentation"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Documentation crate of the imag distribution. Does not contain functionality"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]

libimagannotation     = { version = "0.4.0", path = "../libimagannotation" }
libimagbookmark       = { version = "0.4.0", path = "../libimagbookmark" }
libimagcounter        = { version = "0.4.0", path = "../libimagcounter" }
libimagdiary          = { version = "0.4.0", path = "../libimagdiary" }
libimagentrycategory  = { version = "0.4.0", path = "../libimagentrycategory" }
libimagentrydatetime  = { version = "0.4.0", path = "../libimagentrydatetime" }
libimagentryedit      = { version = "0.4.0", path = "../libimagentryedit" }
libimagentryfilter    = { version = "0.4.0", path = "../libimagentryfilter" }
libimagentrylink      = { version = "0.4.0", path = "../libimagentrylink" }
libimagentrylist      = { version = "0.4.0", path = "../libimagentrylist" }
libimagentrymarkdown  = { version = "0.4.0", path = "../libimagentrymarkdown" }
libimagentrytag       = { version = "0.4.0", path = "../libimagentrytag" }
libimagentrytimetrack = { version = "0.4.0", path = "../libimagentrytimetrack" }
libimagentryview      = { version = "0.4.0", path = "../libimagentryview" }
libimagerror          = { version = "0.4.0", path = "../libimagerror" }
libimaginteraction    = { version = "0.4.0", path = "../libimaginteraction" }
libimagmail           = { version = "0.4.0", path = "../libimagmail" }
libimagnotes          = { version = "0.4.0", path = "../libimagnotes" }
libimagref            = { version = "0.4.0", path = "../libimagref" }
libimagrt             = { version = "0.4.0", path = "../libimagrt" }
libimagstore          = { version = "0.4.0", path = "../libimagstore" }
libimagtimeui         = { version = "0.4.0", path = "../libimagtimeui" }
libimagtodo           = { version = "0.4.0", path = "../libimagtodo" }
libimagutil           = { version = "0.4.0", path = "../libimagutil" }
