[package]
name = "imag-bookmark"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-bookmark command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = "2.*"
log = "0.3"
version = "2.0.1"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagbookmark]
path = "../libimagbookmark"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentrylink]
path = "../libimagentrylink"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

