[package]
name = "imag-bookmark"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-bookmark command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = ">=2.17"
log = "0.3"
version = "2.0.1"

libimagrt        = { version = "0.4.0", path = "../libimagrt" }
libimagutil      = { version = "0.4.0", path = "../libimagutil" }
libimagbookmark  = { version = "0.4.0", path = "../libimagbookmark" }
libimagerror     = { version = "0.4.0", path = "../libimagerror" }
libimagentrylink = { version = "0.4.0", path = "../libimagentrylink" }
libimagentrytag  = { version = "0.4.0", path = "../libimagentrytag" }
