[package]
name = "imag-counter"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-counter command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[profile.dev]
codegen-units = 2

[dependencies]
clap = ">=2.17"
log = "0.3"
version = "2.0.1"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagcounter]
path = "../libimagcounter"

