[package]
name = "imag-diary"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-diary command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
chrono = "0.4"
version = "2.0"
clap = "2.*"
log = "0.3"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagdiary]
path = "../libimagdiary"

[dependencies.libimagentryedit]
path = "../libimagentryedit"

[dependencies.libimagentrylist]
path = "../libimagentrylist"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimaginteraction]
path = "../libimaginteraction"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagtimeui]
path = "../libimagtimeui"

