[package]
name = "imag-diary"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-diary command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
chrono = "0.4"
version = "2.0"
clap = "2.*"
log = "0.3"

libimagrt = "0.3.0"
libimagdiary = "0.3.0"
libimagentryedit = "0.3.0"
libimagentrylist = "0.3.0"
libimagerror = "0.3.0"
libimaginteraction = "0.3.0"
libimagutil = "0.3.0"
libimagstore = "0.3.0"
libimagtimeui = "0.3.0"
