[package]
name = "imag-diary"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-diary command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
chrono = "0.4"
version = "2.0"
clap = "2.*"
log = "0.3"

libimagrt          = { version = "0.4.0", path = "../libimagrt" }
libimagdiary       = { version = "0.4.0", path = "../libimagdiary" }
libimagentryedit   = { version = "0.4.0", path = "../libimagentryedit" }
libimagentrylist   = { version = "0.4.0", path = "../libimagentrylist" }
libimagerror       = { version = "0.4.0", path = "../libimagerror" }
libimaginteraction = { version = "0.4.0", path = "../libimaginteraction" }
libimagutil        = { version = "0.4.0", path = "../libimagutil" }
libimagstore       = { version = "0.4.0", path = "../libimagstore" }
libimagtimeui      = { version = "0.4.0", path = "../libimagtimeui" }
