[package]
name = "imag-link"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-link command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.2.1"
clap = "2.*"
log = "0.3"
version = "2.0.1"
toml = "0.2.*"
url = "1.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagentrylink]
path = "../libimagentrylink"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagutil]
path = "../libimagutil"

