[package]
name = "imag-link"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-link command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.5.1"
clap = ">=2.17"
log = "0.3"
version = "2.0.1"
toml = "^0.4"
toml-query = "0.1"
url = "1.2"

libimagstore = "0.3.0"
libimagrt = "0.3.0"
libimagentrylink = "0.3.0"
libimagerror = "0.3.0"
libimagutil = "0.3.0"

[dev-dependencies.libimagutil]
version = "0.3.0"
default-features = false
features         = ["testing"]

