[package]
name = "imag-mail"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
semver = "0.5"
clap = "2.*"
log = "0.3"
version = "2.0.1"
toml = "0.4.*"
url = "1.2"

libimagrt = "0.3.0"
libimagmail = "0.3.0"
libimagerror = "0.3.0"
libimagutil = "0.3.0"
libimagref = "0.3.0"
