[package]
name = "imag-notes"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-notes command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.2.1"
clap = ">=2.17"
log = "0.3"
version = "2.0.1"
itertools = "0.5"

libimagrt = "0.3.0"
libimagnotes = "0.3.0"
libimagentryedit = "0.3.0"
libimagentrytag = "0.3.0"
libimagerror = "0.3.0"
libimagutil = "0.3.0"
