[package]
name = "imag-notes"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-notes command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.2.1"
clap = ">=2.17"
log = "0.3"
version = "2.0.1"
itertools = "0.5"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagnotes]
path = "../libimagnotes"

[dependencies.libimagentryedit]
path = "../libimagentryedit"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagutil]
path = "../libimagutil"

