[package]
name = "imag-ref"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-ref command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.5.1"
clap = ">=2.17"
log = "0.3"
version = "2.0.1"

libimagstore = "0.3.0"
libimagrt = "0.3.0"
libimagref = "0.3.0"
libimagerror = "0.3.0"
libimaginteraction = "0.3.0"
libimagentrylist = "0.3.0"
libimagutil = "0.3.0"
