[package]
name = "imag-ref"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-ref command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
semver = "0.5.1"
clap = ">=2.17"
log = "0.3"
version = "2.0.1"

libimagstore       = { version = "0.4.0", path = "../libimagstore" }
libimagrt          = { version = "0.4.0", path = "../libimagrt" }
libimagref         = { version = "0.4.0", path = "../libimagref" }
libimagerror       = { version = "0.4.0", path = "../libimagerror" }
libimaginteraction = { version = "0.4.0", path = "../libimaginteraction" }
libimagentrylist   = { version = "0.4.0", path = "../libimagentrylist" }
libimagutil        = { version = "0.4.0", path = "../libimagutil" }
