[package]
name = "imag-ruby"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
ruru = "0.9"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagutil]
path = "../libimagutil"

