[package]
name = "imag-store"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-store command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = ">=2.17"
log = "0.3"
version = "2.0.1"
semver = "0.5"
toml = "^0.4"

[dependencies.libimagstore]
path = "../libimagstore"
default-features = false
features = ["verify"]

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagerror]
path = "../libimagerror"

[features]
early-panic = [ "libimagstore/early-panic" ]

