[package]
name = "imag-tag"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
clap = "2.1.1"
log = "0.3"
version = "2.0.1"
semver = "0.2.1"
toml = "0.2.*"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

