[package]
name = "imag-tag"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Part of the imag core distribution: imag-tag command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = "2.*"
log = "0.3"
version = "2.0.1"
semver = "0.2"
toml = "^0.4"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

[dependencies.libimagutil]
path = "../libimagutil"

[dev-dependencies.libimagutil]
path = "../libimagutil"
default-features = false
features         = ["testing"]

[dev-dependencies]
toml-query = "0.3.0"

