[package]
authors = ["mario <mario-krehl@gmx.de>"]
name = "imag-todo"
version = "0.2.0"

description = "Part of the imag core distribution: imag-todo command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = "2.*"
glob = "0.2.11"
log = "0.3.6"
semver = "0.2.3"
serde_json = "0.7.4"
task-hookrs = "0.2.0"
toml = "0.2.*"
version = "2.0.1"

libimagerror = "0.2.0"
libimagrt    = "0.2.0"
libimagstore = "0.2.0"
libimagtodo  = "0.2.0"

