[package]
authors = ["mario <mario-krehl@gmx.de>"]
name = "imag-todo"
version = "0.3.0"

description = "Part of the imag core distribution: imag-todo command"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
clap = ">=2.17"
glob = "0.2.11"
log = "0.3.6"
semver = "0.5.1"
serde_json = "0.8.3"
task-hookrs = "0.2.2"
toml = "0.4.*"
toml-query = "0.3.*"
is-match = "0.1.*"
version = "2.0.1"

libimagrt = "0.3.0"
libimagstore = "0.3.0"
libimagtodo = "0.3.0"
libimagerror = "0.3.0"
