[package]
name = "imag-view"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
clap = "2.*"
log = "0.3"
semver = "0.2.1"
toml = "0.2.*"
version = "2.0.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentryview]
path = "../libimagentryview"

