[package]
name = "libimagannotation"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

[dependencies]
uuid = { version = "0.3.1", features = ["v4"] }
lazy_static = "0.1.15"
toml = "^0.4"

libimagstore = "0.3.0"
libimagnotes = "0.3.0"
libimagerror = "0.3.0"
libimagentrylink = "0.3.0"
libimagutil = "0.3.0"
